- Add Four Styles Clock

--- a/AnalogClock/AnalogClock.csproj
+++ b/AnalogClock/AnalogClock.csproj
@@ -95,9 +95,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Styles\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Page Include="Forms\About.xaml">
       <SubType>Designer</SubType>
@@ -110,6 +108,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="clock.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Styles\Style1.png" />
+    <Resource Include="Styles\Style4.png" />
+    <Resource Include="Styles\Style3.png" />
+    <Resource Include="Styles\Style2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
